--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -369,7 +369,7 @@ Für entfernte Aufnahmen, lade den AIRS Anwendungsserver vom Internet (siehe auf
 <string name="WiFi_Interval_on">Abfrageintervall für WiFi Scans in Sekunden</string>
 <string name="Enable_Accessibility">Accessibility</string>
 <string name="Enable_Accessibility_on">Springt zu den Systemeinstellungen, um die Bedienungshilfen für AIRS einzuschalten. Dieser wird für IM Nachrichten benötigt.</string>
-<string name="accessibility_description">Bedienungshilfe für AIRS Aufzeichnungen mit Zugriff auf Google Talk und Skype Benachrichtigungen durch den NO Sensor. Spotify ist auch unterstützt durch die MP/MA/MT Sensoren.</string>
+<string name="accessibility_description">Zugriff auf Benachrichtigungen für myStress</string>
 <string name="accessibility_spotify">&#8212;</string>
 
 <string name="Camera">Kamera</string>
@@ -402,6 +402,8 @@ Für entfernte Aufnahmen, lade den AIRS Anwendungsserver vom Internet (siehe auf
 <string name="Music_path_on">Bestimme den Pfad für Musik</string>
 
 <!-- sensor descriptions and explanations -->
+<string name="AC_d">Aktivität</string>
+<string name="AC_e">Berechnet die Aktivität des Nutzers anhand der Bewegungen des Smartphones.</string>
 <string name="AF_d">Umgebungsfrequenz</string>
 <string name="AF_e">Bestimmt die geschätzte Audiofrequenz um die Tonhöhe in Hz zu bestimmen.</string>
 <string name="AS_d">Umgebungsgeräuschpegel</string>
@@ -587,5 +589,5 @@ Für entfernte Aufnahmen, lade den AIRS Anwendungsserver vom Internet (siehe auf
 <string name="Get_storica">Hole Dir Storica!</string>
 <string name="Storica_description">Zusätzlich zu den kurzzeitgen Visualisierungen in AIRS kannst Du Deine AIRS Aufnahmen auch mit engagierten Multimediagrafiken verarbeiten und anzeigen lassen. Dazu benötigst Du die Storica Anwendung - drücke auf das Bild unten und lade es vom PlayStore!</string>
 <string name="debug_setting">true</string>
-<string name="activatedSensors">AS;AF;Ba;BC;BM;CA;CR;CD;CL;CC;GI;GS;HU;RO;PI;LI;Az;PR;PU;PD;TR;TU;KL;NO;TS;TL;Rm;Sc;IC;OC;SR;SS;TM;WC;VI</string>
+<string name="activatedSensors">AC;AS;AF;Ba;BC;BM;CA;CR;CD;CL;CC;GI;GS;HU;RO;PI;LI;Az;PR;PU;PD;TR;TU;KL;NO;TS;TL;Rm;Sc;IC;OC;SR;SS;TM;WC;VI</string>
 </resources>
