--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -216,6 +216,8 @@ along with this library; if not, write to the Free Software Foundation, Inc.,
 <string name="IC_e">Bestimmt Information über einen ankommenden Anruf mit Telefonnummer und Kontaktnamen (falls im Telefonbuch).</string>
 <string name="OC_d">Ausgehender Anruf</string>
 <string name="OC_e">Bestimmt Information über einen ausgehenden Anruf mit Telefonnummer und Kontaktnamen (falls im Telefonbuch).</string>
+<string name="SL_d">Stresslevel</string>
+<string name="SL_e">Gibt Nutzereingaben zu gefühltem Stresslevel an.</string>
 <string name="SR_d">Empfangene SMS</string>
 <string name="SR_e">Bestimmt Information über eine ankommende SMS mit Telefonnummer und Kontaktnamen (falls im Telefonbuch), sowohl dem eigentlichen Text.</string>
 <string name="SS_d">Gesendete SMS</string>
@@ -252,12 +254,20 @@ along with this library; if not, write to the Free Software Foundation, Inc.,
 <string name="WC_e">Bestimmt ob das Handy momentan an WiFi angeschlossen ist (1, wenn ja, 0, wenn nicht).</string>
 
 <string name="debug_setting">false</string>
-<string name="activatedSensors">AC;AS;AF;Az;Ba;BC;BM;CA;CR;CD;CL;CC;GI;GS;HU;PH;RO;PI;LI;PR;PU;PD;TR;TV;NO;TI;Rm;Sc;SR;SS;TM;WC;VI</string>
+<string name="activatedSensors">AC;AS;AF;Az;Ba;BC;BM;CA;CR;CD;CL;CC;GI;GS;HU;PH;RO;PI;LI;PR;PU;PD;SL;TR;TV;NO;TI;Rm;Sc;SR;SS;TM;WC;VI</string>
 <string name="accessibility_titel">Bitte aktivieren Sie die Bedienhilfe</string>
 <string name="accessibility_message">Damit die Applikation korrekt arbeiten kann, würden wir Sie bitten die Bedienhilfe zu aktivieren</string>
 <string name="accessibility_goto">Einstellungen</string>
 <string name="uniqueID">Identifikationsnummer</string>
 <string name="accessibility_description">Bedienungshilfe für myStress Aufzeichnungen</string>
 <string name="accessibility_spotify">&#8212;</string>
+
+<string name="notnow">In 15 Min.</string>
+<string name="skip">Diesmal nicht</string>
+<string name="q_intro">Wie oft hatten Sie seit dem letzten Messpunkt das Gefühl, &#8230;</string>
+<string name="q1">&#8230; die Kontrolle über wichtige Dinge zu verlieren?</string>
+<string name="q2">&#8230; sicher mit Ihren Aufgaben und Problemen umgehen zu können?</string>
+<string name="q3">&#8230; dass die Dinge nach Ihren Vorstellungen verlaufen?</string>
+<string name="q4">&#8230; die Fülle an Aufgaben/Problemen nicht mehr bewältigen zu können?</string>
 
 </resources>
