--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -252,12 +252,20 @@ along with this library; if not, write to the Free Software Foundation, Inc.,
 <string name="WC_e">Provides status information (1 if phone is connected to a WiFi).</string> 
 
 <string name="debug_setting">false</string>
-<string name="activatedSensors">AC;AS;AF;Az;Ba;BC;BM;CA;CR;CD;CL;CC;GI;GS;HU;PH;RO;PI;LI;PR;PU;PD;TR;TV;NO;TI;Rm;Sc;SR;SS;TM;WC;VI</string>
+<string name="activatedSensors">AC;AS;AF;Az;Ba;BC;BM;CA;CR;CD;CL;CC;GI;GS;HU;PH;RO;PI;LI;PR;PU;PD;SL;TR;TV;NO;TI;Rm;Sc;SR;SS;TM;WC;VI</string>
 <string name="accessibility_titel">Please activate the accessibility service</string>
 <string name="accessibility_message">To ensure that the application is working correctly, we would like you to activate the accessibility service.</string>
 <string name="accessibility_goto">Settings</string>
 <string name="uniqueID">Identitynumber</string>
 <string name="accessibility_description">Accessibility for myStress recordings</string>
 <string name="accessibility_spotify">&#8212;</string>
+
+<string name="notnow">In 15 min</string>
+<string name="skip">Skip this time</string>
+<string name="q_intro">Wie oft hatten Sie seit dem letzten Messpunkt das Gefühl, &#8230;</string>
+<string name="q1">&#8230; die Kontrolle über wichtige Dinge zu verlieren?</string>
+<string name="q2">&#8230; sicher mit Ihren Aufgaben und Problemen umgehen zu können?</string>
+<string name="q3">&#8230; dass die Dinge nach Ihren Vorstellungen verlaufen?</string>
+<string name="q4">&#8230; die Fülle an Aufgaben/Problemen nicht mehr bewältigen zu können?</string>
 
 </resources>
