--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -19,7 +19,7 @@ along with this library; if not, write to the Free Software Foundation, Inc.,
 <string name="app_name">myStress</string>
 <string name="Copyright">&#169; 2004-2006 Nokia Corp.\n&#169; 2008-2012 Dirk Trossen \n&#169; 2013-2014 TecVis LP \n&#169; 2014 FIM Research Center
 \n\nContact: myStress@fim-rc.de
-\n\nManual: ADD LINK
+\n\nFAQ (only available in german!): http://goo.gl/bkZkgF
 \n\nmyStress source code is licensed under LGPL 2.0 license and soon hosted on Github. For more information on license terms, review <b>license.txt</b>!
 \n\nThis Application was developed at the FIM Research Center in cooperation with the Elite Graduate Program Finance and Information Management. 
 \n\nThe objective of this research process is the unobtrusivly recognition and prediction of stress.
@@ -31,7 +31,9 @@ along with this library; if not, write to the Free Software Foundation, Inc.,
 <string name="Help">Help</string>
 <string name="recording_prompt">Type of Recording</string>
 <string name="MapAbout">Shows a path of recent GPS recording. You can click on a marker for more information. You can center the map either on your current location or the last stored one (using the buttons on the top right). You can also switch between map or satellite view with the appropriate options menu item.</string>
-<string name="RecordAbout">Start recording here, selecting the mode of recording you would like.\n\nYou can also load and delete <b>templates</b> that you stored as well as create shortcuts to a selected template on your launcher screen. Clicking on a template will automatically load the template.\n\nInstead of defining your own templates, you can also <b>download</b> examples from the TecVis server.</string>
+<string name="RecordAbout">Start the recording and selecte the mode of the recording.\n\n
+-Remote- all collected data are uploaded within an 12-hour intervall to a GDrive, if a proper wifi connection is established\n\n
+-Local- all collected data are saved on the smartphone, however you frequently have to manually synchronise the data.</string>
 <string name="LocalAbout">Shows the sensors available in local sensing mode.\nChoose the sensors you would like to record. Through the menu, you can select and unselect all sensors (for a clean sheet) as well as look at the sensor repository, giving you information on type, value ranges etc of the sensors that were discovered.</string>
 <string name="ValuesAbout">Shows the current values of the sensors being read in local mode.\nFrom here, you can either <b>Exit</b> the program (and stop the service) or simply stop the display with the <b>BACK</b> key!\nYou can also <b>PAUSE</b> or <b>RESUME</b> the measurement threads (this does not stop the service but halts the recordings only).</string>
 <string name="TimelineAbout">Shows a historical timeline of the sensor you just clicked on. You can change the number of historical values in the <b>General Settings</b>\nExit the timeline by using the <b>BACK</b> key!</string>
@@ -42,8 +44,13 @@ along with this library; if not, write to the Free Software Foundation, Inc.,
 <string name="Cancel">Cancel</string>
 
 <string name="Getting_Started">Getting Started</string>
-<string name="Getting_Started2">Description\n
-    Start
+<string name="Getting_Started2">Thank you very much for your participation at our research project.
+\n\nThis Application was developed at the FIM Research Center in cooperation with the Elite Graduate Program Finance and Information Management.
+\n\nThe objective of this research process is the unobtrusivly recognition and prediction of stress.
+\n\nThe current version of myStress records on the one hand the source for stress and on the other hand the felt stress level to detected stress relevent charateristics.
+\n\nAfter the first start, myStress is running in background and records within 6-minute intervall the values of the integrated sensors.
+\n\nThree times daily, the user is asked to answer four short questions about his current stress level.
+\n\n\nFor further questions please have a look at the FAQ (only available in german!) http://goo.gl/bkZkgF or send an email to myStress@fim-rc.de
 </string>
 
 <string name="sensed">sensed</string>
@@ -259,7 +266,10 @@ along with this library; if not, write to the Free Software Foundation, Inc.,
 <string name="uniqueID">Identitynumber</string>
 <string name="accessibility_description">Accessibility for myStress recordings</string>
 <string name="accessibility_spotify">&#8212;</string>
-
+<string name="localSensing">myStress Local Sensing</string>
+<string name="myStressUpload">myStress Upload</string>
+<string name="myStress_Map">myStress Mapp</string>
+<string name="myStress_Timeline">myStress Timeline</string>
 <string name="notnow">In 15 min</string>
 <string name="skip">Skip this time</string>
 <string name="q_intro">Wie oft hatten Sie seit dem letzten Messpunkt das Gefühl, &#8230;</string>
