--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -120,6 +120,8 @@ along with this library; if not, write to the Free Software Foundation, Inc.,
 <string name="AF_e">Bestimmt die geschätzte Audiofrequenz um die Tonhöhe in Hz zu bestimmen.</string>
 <string name="AS_d">Umgebungsgeräuschpegel</string>
 <string name="AS_e">Bestimmt den geschätzten Lärmpegel in dB.</string>
+<string name="AU_d">Audioanalyse</string>
+<string name="AU_e">Analyse des Audiosignals während eines Anrufs.</string>
 <string name="BT_d">Umgebene BT Geräte</string>
 <string name="BT_e">Bestimmt Information über BT Geräte in der Umgebung wie MAC Adresse und BT Namen.</string>
 <string name="BN_d"># umgebener BT Geräte</string>
@@ -224,6 +226,8 @@ along with this library; if not, write to the Free Software Foundation, Inc.,
 <string name="OC_e">Bestimmt Information über einen ausgehenden Anruf mit Telefonnummer und Kontaktnamen (falls im Telefonbuch).</string>
 <string name="SL_d">Stresslevel</string>
 <string name="SL_e">Gibt Nutzereingaben zu gefühltem Stresslevel an.</string>
+<string name="SM_d">Stress-Metadaten</string>
+<string name="SM_e">Gibt Informationen über den Status der Stresslevel-Abfrage.</string>
 <string name="SR_d">Empfangene SMS</string>
 <string name="SR_e">Bestimmt Information über eine ankommende SMS mit Telefonnummer und Kontaktnamen (falls im Telefonbuch), sowohl dem eigentlichen Text.</string>
 <string name="SS_d">Gesendete SMS</string>
@@ -260,7 +264,7 @@ along with this library; if not, write to the Free Software Foundation, Inc.,
 <string name="WC_e">Bestimmt ob das Handy momentan an WiFi angeschlossen ist (1, wenn ja, 0, wenn nicht).</string>
 
 <string name="debug_setting">false</string>
-<string name="activatedSensors">AC;AS;AF;Az;Ba;BC;BM;CA;CR;CD;CL;CC;GI;GS;HU;PH;RO;PI;LI;PR;PU;PD;SL;TR;TV;NO;TI;Rm;Sc;SR;SS;TM;WC;VI</string>
+<string name="activatedSensors">AC;AS;AF;Az;Ba;BC;BM;CA;CR;CD;CL;CC;GI;GS;HU;PH;RO;PI;LI;PR;PU;PD;SL;SM;TR;TV;NO;TI;Rm;Sc;SR;SS;TM;WC;VI</string>
 <string name="accessibility_titel">Bitte aktivieren Sie die Bedienhilfe</string>
 <string name="accessibility_message">Damit die Applikation korrekt arbeiten kann, würden wir Sie bitten die Bedienhilfe zu aktivieren</string>
 <string name="accessibility_goto">Einstellungen</string>
