--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -47,7 +47,7 @@ along with this library; if not, write to the Free Software Foundation, Inc.,
 <string name="Getting_Started2">Thank you very much for your participation at our research project.
 \n\nThis Application was developed at the FIM Research Center in cooperation with the Elite Graduate Program Finance and Information Management.
 \n\nThe objective of this research process is the unobtrusivly recognition and prediction of stress.
-\n\nThe current version of myStress records on the one hand the source for stress and on the other hand the felt stress level to detected stress relevent charateristics.
+\n\nThe current version of myStress records on the one hand the source for stress and on the other hand the felt stress level to detected stress relevant charateristics.
 \n\nAfter the first start, myStress is running in background and records within 6-minute intervall the values of the integrated sensors.
 \n\nThree times daily, the user is asked to answer four short questions about his current stress level.
 \n\n\nFor further questions please have a look at the FAQ (only available in german!) http://goo.gl/bkZkgF or send an email to myStress@fim-rc.de
@@ -261,7 +261,7 @@ along with this library; if not, write to the Free Software Foundation, Inc.,
 <string name="WC_e">Provides status information (1 if phone is connected to a WiFi).</string> 
 
 <string name="debug_setting">false</string>
-<string name="activatedSensors">AC;AS;AF;Az;Ba;BC;BM;CA;CR;CD;CL;CC;GI;GS;HU;PH;RO;PI;LI;PR;PU;PD;SL;TR;TV;NO;TI;Rm;Sc;SR;SS;TM;WC;VI</string>
+<string name="activatedSensors">AC;AS;AF;AU;Az;Ba;BC;BM;CA;CR;CD;CL;CC;GI;GS;HU;PH;RO;PI;LI;PR;PU;PD;SL;SM;TR;TV;NO;TI;Rm;Sc;SR;SS;TM;WC;VI</string>
 <string name="accessibility_titel">Please activate the accessibility service</string>
 <string name="accessibility_message">To ensure that the application is working correctly, we would like you to activate the accessibility service.</string>
 <string name="accessibility_goto">Settings</string>
